# Solodex

./: .development.env  .gitignore  .pre-commit-config.yaml  .pylintrc  README.md  package-lock.json  pyproject.toml
design/: Untitled Diagram.drawio
solodex/: README.md  global_vars.py  manage.py  package-lock.json
solodex/frontend/: add_person.html  index.html  main.js  package-lock.json  package.json  preload.js  styles.css
solodex/frontend-tauri/: README.md  package-lock.json  package.json
solodex/frontend-tauri/src/: App.tsx
solodex/frontend-tauri/src-tauri/: Cargo.toml  tauri.conf.json
solodex/frontend-tauri/src/components/hooks/: updateGraph.tsx
solodex/frontend-tauri/src/components/layouts/: MainLayout.tsx
solodex/frontend-tauri/src/components/organisms/: GraphView.tsx
solodex/myapp/: models.py  tests.py  urls.py  views.py
solodex/myapp/migrations/: 0001_initial.py
solodex/myapp/templates/: add_person.html
solodex/server/: models.py  test.ipynb  urls.py  views.py
solodex/server/migrations/: 0001_initial.py  0002_alter_description_personalitytraits.py  0002_alter_person_gender.py  0002_remove_person_description_person_information.py  0003_alter_person_description_alter_person_relationships.py  0003_alter_relationships_areas.py  0003_remove_person_aspirations.py  0004_alter_person_aspirations.py  0005_alter_person_id.py  0006_alter_description_personalitytraits.py  0007_description_occupation.py
solodex/solodex/: asgi.py  settings.py  urls.py  wsgi.py
solodex/solodex-conf/: settings.py  urls.py
(+3 files in other folders)
