[project]
name = "solodex"
version = "0.1.0"
description = ""
authors = [
    {name = "Ian Meyer",email = "ian.meyer33@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pandas (>=2.2.3,<3.0.0)",
    "numpy (>=2.2.2,<3.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "django (>=5.1.5,<6.0.0)",
    "pre-commit (>=4.1.0,<5.0.0)",
    "pylint (>=3.3.3,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "djangorestframework (>=3.15.2,<4.0.0)",
    "markdown (>=3.7,<4.0)",
    "django-filter (>=24.3,<25.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false